# multi-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
modules/baselib/: CMakeLists.txt
modules/baselib/interface/: singleton.h
modules/baselib/src/: interface_declare.cpp
modules/communication/: CMakeLists.txt  readme.txt
modules/communication/include/: communicate_hub_factory.h  multi_protocol_communicate.h
modules/communication/include/protocol/: base_adapter.h  dds_adapter.h  tcp_adapter.h  udp_adapter.h
modules/communication/interface/: CommunicationHub.h  CommunicationHubFactory.h  InternalCommunicateHub.h
modules/communication/src/: CommunicationHubFactory.cpp  InternalCommunicateHub.cpp  communicate_hub_factory.cpp  multi_protocol_communicate.cpp
modules/communication/src/protocol/: base_adapter.cpp  dds_adapter.cpp  tcp_adapter.cpp  udp_adapter.cpp
tests/: CMakeLists.txt
tests/communication/: CMakeLists.txt
tests/communication/game_test/: client_simulator.cpp  readme.txt  test_client.py
tests/communication/game_test/config/: server_config.json
tests/communication/game_test/src/: game_message_handler.cpp  game_message_handler.h  game_server.cpp  game_server.h  main.cpp
