macro(subdirlist RESULT DIR)
    file(GLOB CHILDREN RELATIVE ${DIR} ${DIR}/*)
    set(DIRLIST "")
    foreach (CHILD ${CHILDREN})
        if (IS_DIRECTORY ${DIR}/${CHILD})
            list(APPEND DIRLIST ${CHILD})
        endif ()
    endforeach ()
    set(${RESULT} ${DIRLIST})
endmacro()

subdirlist(DIRLIST ${CMAKE_CURRENT_LIST_DIR})
foreach(DIR ${DIRLIST})
    add_subdirectory(${DIR})
endforeach()